--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Demos using Processing",
   "main": "index.html",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LujunWeng/demos-processing.git"
@@ -18,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/LujunWeng/demos-processing/issues"
   },
-  "homepage": "https://github.com/LujunWeng/demos-processing#readme"
+  "homepage": "https://github.com/LujunWeng/demos-processing#readme",
+  "devDependencies": {
+    "babel-cli": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0"
+  }
 }
